--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -16,12 +17,16 @@
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-auth-library": "^9.2.0",
+    "googleapis": "^105.0.0",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "mongoose": "^6.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.8.0",
+    "querystring": "^0.2.1",
     "razorpay": "^2.8.4",
     "sharp": "^0.31.2"
   },
